change crs mas data to Lambert 72

--- a/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
+++ b/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
@@ -72,7 +72,8 @@ mas <- read_sf(
       datum %within% interval(
         ymd(paste(jaar, r4_start, sep = "-")),
         ymd(paste(jaar, r4_stop, sep = "-"))) ~ "R4"
-    ))
+    )) %>%
+  st_transform(crs = 31370)
 ```
 
 ```{r design2022}
