--- a/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
+++ b/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
@@ -2619,15 +2619,26 @@ df_dist_terr_presence <- sp::merge(gele_kwik_2022_territoria, df_territoria2,
                           distinct()
 
 # Inlezen coordinaten telpunt
-telpunt_coord <- read_sf(
-  here("data/processed/steekproef_piloot_avimap.geojson")
-  )
-telpunt_coord <- st_transform(telpunt_coord, crs = 28992)
+telpunt_coord <- read_sf(here("data/processed/steekproef_piloot_avimap.geojson")) %>%
+                   select(definitief_punt)
 
 # Bereken afstanden van centroide tot telpunt
+df_dist_terr_presence2 <- left_join(df_dist_terr_presence %>% as.data.frame(), 
+                            telpunt_coord %>% as.data.frame(), 
+                            by = c("Sample.Label" = "definitief_punt")) %>%
+                          mutate(distance = st_distance(
+                            .data[["geometry.x"]] %>% st_sf(), 
+                            .data[["geometry.y"]] %>% st_sf(), 
+                            by_element = TRUE)) %>%
+                          select(-"geometry.y") %>% 
+                          rename(geometry = geometry.x) %>%
+                          st_sf(sf_column_name = "geometry")
+
+
 
 
 # Voeg afwezigheden toe
+
 
 
 ```
